--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.10.0",
     "redux-logger": "^3.0.6",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "expo-image": "~1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
