--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.10.0",
     "redux-logger": "^3.0.6",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
