--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-uuid": "^2.0.1",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.10.0",
     "redux-logger": "^3.0.6",
     "rn-fetch-blob": "^0.12.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidjs": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
