--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-image": "~1.0.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-native": "0.71.8",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.9.0",
