--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^1.4.0",
     "expo": "~48.0.11",
     "expo-image": "~1.0.1",
+    "expo-print": "~12.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-native": "0.71.8",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
