--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
@@ -38,7 +37,8 @@
     "redux-logger": "^3.0.6",
     "rn-fetch-blob": "^0.12.0",
     "uuid": "^9.0.0",
-    "uuidjs": "^5.0.1"
+    "uuidjs": "^5.0.1",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
