--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
@@ -24,7 +25,6 @@
     "react-native": "0.71.8",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
@@ -37,8 +37,7 @@
     "redux-logger": "^3.0.6",
     "rn-fetch-blob": "^0.12.0",
     "uuid": "^9.0.0",
-    "uuidjs": "^5.0.1",
-    "@expo/webpack-config": "^18.0.1"
+    "uuidjs": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
